<resources>
    <string name="app_name">Football Apps</string>

    <!--nav menu-->
    <string name="menu_match">Matches</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_search">Search</string>

    <!--tab menu-->
    <string name="tab_prev">Previous</string>
    <string name="tab_next">Next</string>
    <string name="tab_team">Teams</string>
    <string name="tab_match">Matches</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_player">Player</string>

    <string-array name="list_leagueName">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </string-array>

    <string-array name="list_leagueId">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </string-array>

    <!--lable-->
    <string name="lable_vs">VS</string>
    <string name="msg_emptyResult">No Result Found</string>
    <string name="msg_emptyMatch">Favorite Match is empty</string>
    <string name="msg_emptyTeam">Favorite Team is empty</string>
    <string name="lable_goals">Goals</string>
    <string name="lable_shots">Shots</string>
    <string name="lable_lineups">Lineups</string>
    <string name="lable_goalkeeper">Goal Keeper</string>
    <string name="lable_defense">Defense</string>
    <string name="lable_midfield">Midfield</string>
    <string name="lable_forward">Forward</string>
    <string name="lable_subtitutes">Subtitutes</string>
    <string name="lable_weight">Weight(Kg)</string>
    <string name="lable_height">Height(m)</string>

    <!--title-->
    <string name="title_detailMatch">Detail Match</string>
    <string name="title_detailMenu">Favorite</string>

    <!--message-->
    <string name="msg_addToFavorite">Added to Favorite</string>
    <string name="msg_removeFromFavorite">Remove from Favorite</string>
</resources>
