<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="rv_match_next" type="id" />
    <item name="rv_match_prev" type="id" />
</resources>