<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_leagues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_horizon_normal"
        android:layout_marginBottom="@dimen/padding_horizon_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/shadow_down" />

    <ProgressBar
        android:id="@+id/pb_process"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="@dimen/progressbar_medium"
        android:layout_height="@dimen/progressbar_medium"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:paddingVertical="@dimen/padding_horizon_normal"
        android:visibility="gone" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_teams"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.appcompat.widget.LinearLayoutCompat>
